<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MarvelProjectBase2</string>
    <string name="escribe_el_nombre">Escribe el nombre...</string>
    <string name="busca_tu_superh_roe">Busca tu superhéroe</string>
    <string name="sin_resultados">Sin resultados</string>
    <string name="links">Links</string>
    <string name="detalle">Details</string>
    <string name="wiki">Wiki</string>
    <string name="comiclink">Comics Links</string>
    <string name="recursos">Recursos</string>
    <string name="error">Error</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_from_favs">Eliminar de favoritos</string>
    <string name="txt_add_fav">Añadir a favoritos</string>
    <string name="error_save_comics">Error al guardar los comics</string>
    <string name="action_settings">Opciones</string>

    <string name="hello">Hello World!</string>
    <string name="title">Hello Notification!</string>
    <string name="notification_posted">Notification posted</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth non está activado. Saíndo da aplicación</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">None paired</string>
    <string name="none_found">None found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Buscando dispositivos</string>
</resources>
